--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.date-format = yyyy.MM.dd HH:mm
 spring.jackson.time-zone = Europe/Zagreb
+csp.policy=default-src 'self'; script-src 'self'; connect-src 'self' https://ec2-18-192-58-114.eu-central-1.compute.amazonaws.com:8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
