--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,9 @@ spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.username = vrsziget
 spring.datasource.password = 1991Jun25?
 
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
+
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
