--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,20 @@
-spring.datasource.url = jdbc:postgresql://vrszigetdb.c16iw068ket4.us-east-1.rds.amazonaws.com:5432/vrszigetdb
+spring.datasource.url = jdbc:postgresql://db-vrsziget.c3q4gowcm4t6.eu-central-1.rds.amazonaws.com:5432/vrszigetdb
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.username = vrsziget
+spring.datasource.username = postgres
 spring.datasource.password = 1991Jun25?
+
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.pool-name=HikariPool-1
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+
+endpoint.username: vrsziget
+endpoint.password: Vrsziget2024.
+
 
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
@@ -12,11 +25,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.date-format = yyyy.MM.dd HH:mm
 spring.jackson.time-zone = Europe/Zagreb
-csp.policy=default-src 'self'; script-src 'self'; connect-src 'self' https://ec2-18-192-58-114.eu-central-1.compute.amazonaws.com:8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ggaborr1@gmail.com
-spring.mail.password=uyaz ykde kaoi rnym
+spring.mail.username=vrsziget@gmail.com
+spring.mail.password=sqwa npop fvql mlsb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
