--- a/environment/.env
+++ b/environment/.env
@@ -1,3 +1,3 @@
 VITE_REACT_APP_API_USER=vrsziget
 VITE_REACT_APP_API_PASS=Vrsziget2024.
-VITE_API_URL=http://localhost:8080/api/
+VITE_API_URL=http://ec2-3-122-241-56.eu-central-1.compute.amazonaws.com:8080/api/
